# claude-code-proxy

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: __init__.py  main.py
src/api/: endpoints.py
src/conversion/: prompt_compressor.py  request_converter.py  response_converter.py
src/core/: client.py  config.py  constants.py  model_manager.py
src/models/: claude.py
